# datutils

./: .gitignore  Cargo.toml  README.md  requirements.txt  setup.cfg
datutils/: __init__.py
examples/: save_load_compressed_msg.rs  save_load_raw_msg.rs
src/: lib.rs
tests/: test_save_load.py
